sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: value >- is not a member of Int
  while (k>-1){
          ^